# ai-agent-experiments

./: .gitignore  README.md
adk-testing/: README.md  pyproject.toml
adk-testing-go/: go.mod
adk-testing/test_agent/: agent.py
adk-testing/test_agent/.adk/: session.db
code-execution/: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.json
code-execution/capabilities/: emailTools.d.ts  emailTools.ts
code-execution/capabilities/declarations/: emailTools.d.ts
code-execution/src/: agent.ts  buildSystemPrompt.ts  executeCodeHandler.ts  index.ts  utils.ts
code-execution/src/llmTools/: discoverCapabilities.ts  executeCodeHandler.ts  index.ts  readCapabilityDeclaration.ts
code-execution/tests/: discoverCapabilities.test.ts  executeCodeHandler.test.ts  readCapabilityDeclaration.test.ts
deepagent-test/: README.md  main.py  pyproject.toml
openai-models/: index.ts  package.json  tsconfig.json
skill-based-agent/: .gitignore  LICENSE  README.md  eslint.config.mjs  package.json  tsconfig.json
skill-based-agent/apps/tui/: eslint.config.mjs  package.json  tsconfig.json
skill-based-agent/apps/vfs-server/: go.mod
skill-based-agent/apps/webapp/: .gitignore  auth.ts  package.json
skill-based-agent/scripts/: convert_model_listing.go
skill-based-agent/src/: agent.ts  build-agent.ts  errors.ts  index.ts  logger.ts  messages.ts  orchestrator.ts  sub-agent-orchestrator.ts
skill-based-agent/src/bak/: orchestrator.ts  sub-agent-orchestrator.ts
skill-based-agent/src/prompts/: root-agent-prompt.ts  sub-agent-prompt.ts
skill-based-agent/tmp/: history.json
(+98 files in other folders)
