[project]
name = "deepagent-test"
version = "0.1.0"
description = "Testing out deepagents lib from langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "deepagents>=0.2.8",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.14",
]
